Better description tag

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Make meetings mean something"
+      content="MeetingZero is a decision-making platform that cuts out busywork, continuously improves organizational performance, and turns teams into problem-solving superheroes."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>MeetingZero</title>
